from adapters.port import StudentRepository, SeatRepository, ReservationRepository
from adapters.model import Student, Seat, Reservation, Position


class MemoryStudentRepository(StudentRepository):
    def __init__(self, students: dict[str, Student]) -> None: ...
    def save(self, student: Student) -> None: ...
    def get_by_id(self, student_id: str) -> Student: ...
    def get_all(self) -> list[Student]: ...


class MemorySeatRepository(SeatRepository):
    def __init__(self, seats: dict[Position, Seat]) -> None: ...
    def save(self, seat: Seat) -> None: ...
    def get_by_position(self, position: Position) -> Seat: ...
    def get_all(self) -> list[Seat]: ...


class MemoryReservationRepository(ReservationRepository):
    def __init__(self, reservations: dict[int, Reservation]) -> None: ...
    def save(self, reservation: Reservation) -> None: ...
    def get_by_id(self, id: int) -> Reservation: ...
    def get_by_student_id(self, student_id: str) -> list[Reservation]: ...
    def get_by_seat_position(self, position: Position) -> list[Reservation]: ...
    def get_all(self) -> list[Reservation]: ...
